2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: Fixed a few double-free when reading
	  bogus background desktop file (Closes NB#35494)

2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: Handle empty names for backgrounds
	  gracefully (Closes NB#35454)

2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c: Fixed the leak of the thumb icon
	  pixbuf (Closes NB#34662)
	* hildon-navigator/others-menu.c: Fixed the leak of the others-menu
	  icon pixbuf
	* hildon-navigator/hn-app-switcher.c: Fixed the leak of the AS menu
	  icon pixbuf
	* hildon-status-bar/hildon-status-bar-main.c: Fixed the leak of a string

2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.c: brought back "toggle" handler, but
	  do not call it when events are being caught by the press_collapser
	  (Closes NB#36129)

2006-07-26  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-log.[ch]: New files. GObject for
	  logging and watching of plugins.
	* hildon-status-bar/hildon-status-bar-item.[ch]: 
	  - added signal for logging.
	  - splitted instance and initialization of plugin.
	* hildon-status-bar/hildon-status-bar-main.[ch]:
	  - added support for HildonLog
	* hildon-status-bar/Makefile.am: Added hildon-log.[ch].

2006-07-26  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: use the is-inconsistent property
	  to decide which state to draw the button in. This allows the button
	  to be drawn as untoggled when the fifth application is chosen in the
	  AS menu

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.15

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	Applied further fix to "Application switcher area does not immediately
	reflect the state of the application" (Closes NB#35604)
	* hildon-navigator/hn-app-button.c: Added method to force the update
	  of the button icon